cilium/yuri.yaml
apiVersion: v1
kind: Pod
metadata:
  name: yuri
  labels:
    country: ostania
    agent: yuri
spec:
  containers:
  - name: briars
    image: docker.io/tgraf/netperf
