cilium/wise.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wise
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    country: westalis
    org: wise
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wise
spec:
  replicas: 2
  selector:
    matchLabels:
      country: westalis
      org: wise
  template:
    metadata:
      labels:
        country: westalis
        org: wise
    spec:
      containers:
      - name: wise
        image: docker.io/syogesh174/wise-app
